--- a/.github/workflows/simstest.yml
+++ b/.github/workflows/simstest.yml
@@ -8,20 +8,18 @@ on:
       sims:      { description: "Sims per race", required: false, default: "600" }
       topn:      { description: "TopN (trifecta_topN時)", required: false, default: "18" }
       unit:      { description: "Bet unit (JPY)", required: false, default: "100" }
-      k:         { description: "exactaのK", required: false, default: "2" }
-      m:         { description: "thirdのM", required: false, default: "4" }
-      filter:
-        description: >-
-          例: pids=02,04;races=1R,2R;only_first1=true;odds_base=./public/odds/v1;
-              odds_bands=01-09,10-19,20-49;odds_min=10;odds_max=49;min_ev=1.2;require_odds=true;predict_only=false
-        required: false
-        default: ""
-      exclude_first1:
-        description: "1着=1号艇の買い目を除外（true/false）"
-        required: false
-        default: "false"
+      odds_min:  { description: "オッズ下限（例: 10）", required: false, default: "" }
+      odds_max:  { description: "オッズ上限（例: 49.9）", required: false, default: "" }
+      min_ev:    { description: "期待値しきい値 EV=p*odds（例: 1.2）", required: false, default: "" }
       params:
         description: "外部パラメータファイル(.toml/.json)のパス（例: params/freer-10.toml）"
+        required: false
+        default: ""
+      filter:
+        description: >-
+          追加の絞り込み・上書き（;区切り）。例:
+          pids=02,04;races=1R,2R;only_first1=true;odds_base=./public/odds/v1;
+          odds_bands=01-09,10-19,20-49;require_odds=false;predict_only=false
         required: false
         default: ""
 
@@ -32,7 +30,6 @@ jobs:
       contents: write
     env:
       TZ: Asia/Tokyo
-      # ★ TOML/JSON を読ませるため、評価スクリプトを指定
       PYTHON_SCRIPT: scripts/sims/sims.py
 
     steps:
@@ -63,13 +60,17 @@ jobs:
           SIMS="${{ github.event.inputs.sims || '600' }}"
           TOPN="${{ github.event.inputs.topn || '18' }}"
           UNIT="${{ github.event.inputs.unit || '100' }}"
-          # strategy 入力は削除 → 常に trifecta_topN（必要ならfilterで切替）
-          STRATEGY="trifecta_topN"
-          KVAL="${{ github.event.inputs.k || '2' }}"
-          MVAL="${{ github.event.inputs.m || '4' }}"
-          FILTER="${{ github.event.inputs.filter || '' }}"
-          EXCL="${{ github.event.inputs.exclude_first1 || 'false' }}"
+
+          # 追加昇格分
+          ODDS_MIN_IN="${{ github.event.inputs.odds_min || '' }}"
+          ODDS_MAX_IN="${{ github.event.inputs.odds_max || '' }}"
+          MIN_EV_IN="${{ github.event.inputs.min_ev || '' }}"
           PARAMS_FILE="${{ github.event.inputs.params || '' }}"
+
+          # 固定ロジック
+          STRATEGY="trifecta_topN"
+
+          FILTER="${{ github.event.inputs.filter || '' }}"
 
           # repo 直下 public をデフォルトに
           if [ -z "$BASE_INPUT" ]; then
@@ -80,13 +81,14 @@ jobs:
 
           # filter のパース
           PIDS=""; RACES=""
-          ONLY="false"; ODDS_BASE=""
-          MIN_EV=""
-          # 既定を true に寄せたければここを "true" に
-          REQUIRE_ODDS="false"
+          ONLY="false"
+          ODDS_BASE=""
+          # 既定: require_odds は true（filter で false に上書き可）
+          REQUIRE_ODDS="true"
           ODDS_BANDS=""
-          ODDS_MIN=""
-          ODDS_MAX=""
+          ODDS_MIN="$ODDS_MIN_IN"
+          ODDS_MAX="$ODDS_MAX_IN"
+          MIN_EV="$MIN_EV_IN"
           PREDICT_ONLY="false"
 
           if [ -n "$FILTER" ]; then
@@ -99,11 +101,11 @@ jobs:
                 races)          RACES="$val" ;;
                 only_first1)    ONLY="$val" ;;
                 odds_base)      ODDS_BASE="$val" ;;
-                min_ev)         MIN_EV="$val" ;;
+                min_ev)         MIN_EV="$val" ;;          # 入力欄より filter が優先
                 require_odds)   REQUIRE_ODDS="$val" ;;
                 odds_bands)     ODDS_BANDS="$val" ;;
-                odds_min)       ODDS_MIN="$val" ;;
-                odds_max)       ODDS_MAX="$val" ;;
+                odds_min)       ODDS_MIN="$val" ;;        # 入力欄より filter が優先
+                odds_max)       ODDS_MAX="$val" ;;        # 入力欄より filter が優先
                 predict_only)   PREDICT_ONLY="$val" ;;
               esac
             done
@@ -114,33 +116,20 @@ jobs:
             ODDS_BASE="$BASE/odds/v1"
           fi
 
-          # 排他チェック
-          if [ "${EXCL,,}" = "true" ] && [ "${ONLY,,}" = "true" ]; then
-            echo "::error ::exclude_first1 と only_first1 は同時指定できません"
-            exit 1
-          fi
-
           echo "[debug] BASE=$BASE"
-          echo "[debug] DATES=${DATES:-'(none)'}"
-          echo "[debug] STRATEGY=$STRATEGY  TOPN=$TOPN  K=$KVAL  M=$MVAL"
-          echo "[debug] ODDS_BASE=$ODDS_BASE  MIN_EV=${MIN_EV:-'(none)'}  REQUIRE_ODDS=$REQUIRE_ODDS"
+          echo "[debug] DATES=${DATES:-'(none)'}  SIMS=$SIMS  TOPN=$TOPN  UNIT=$UNIT"
+          echo "[debug] ODDS_BASE=$ODDS_BASE  REQUIRE_ODDS=$REQUIRE_ODDS"
           echo "[debug] ODDS_BANDS=${ODDS_BANDS:-'(none)'}  ODDS_MIN=${ODDS_MIN:-'(none)'}  ODDS_MAX=${ODDS_MAX:-'(none)'}"
-          echo "[debug] ONLY_FIRST1=$ONLY  EXCLUDE_FIRST1=$EXCL  PREDICT_ONLY=$PREDICT_ONLY"
+          echo "[debug] MIN_EV=${MIN_EV:-'(none)'}  ONLY_FIRST1=$ONLY  PREDICT_ONLY=$PREDICT_ONLY"
           echo "[debug] PARAMS_FILE=${PARAMS_FILE:-'(none)'}"
           [ -d "$BASE" ] && ls -la "$BASE" || true
 
-          ARGS=( --base "$BASE" --sims "$SIMS" --unit "$UNIT" )
+          ARGS=( --base "$BASE" --sims "$SIMS" --unit "$UNIT" --strategy "$STRATEGY" --topn "$TOPN" )
           [ -n "$DATES" ] && ARGS+=( --dates "$DATES" )
           [ -n "$PIDS"  ] && ARGS+=( --pids "$PIDS" )
           [ -n "$RACES" ] && ARGS+=( --races "$RACES" )
 
-          # 買い目ロジック（固定）
-          ARGS+=( --strategy "$STRATEGY" --topn "$TOPN" )
-
-          # 1着=1号艇関連
-          if [ "${EXCL,,}" = "true" ]; then
-            ARGS+=( --exclude-first1 )
-          fi
+          # 1着=1号艇のみを filter から指定可（exclude は廃止）
           if [ "${ONLY,,}" = "true" ]; then
             ARGS+=( --only-first1 )
           fi
@@ -167,7 +156,7 @@ jobs:
             [ -n "$ODDS_MAX" ] && ARGS+=( --odds-max "$ODDS_MAX" )
           fi
 
-          # ★ 新規：外部パラメータファイル
+          # 外部パラメータファイル
           if [ -n "$PARAMS_FILE" ]; then
             ARGS+=( --params "$PARAMS_FILE" )
           fi
