--- a/.github/workflows/simstest.yml
+++ b/.github/workflows/simstest.yml
@@ -158,7 +158,8 @@ jobs:
           set -eux
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add scripts/sims/*.csv scripts/sims/*.json || true
+          # ▼ 再帰で scripts/sims 配下すべて（keyman も含む）
+          git add -A scripts/sims || true
           git commit -m "SimS outputs ($(date +'%Y-%m-%d %H:%M:%S %Z'))" || true
           git push || true
 
@@ -166,7 +167,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: sims-outputs
+          # ▼ 再帰で JSON/CSV を収集（keyman ディレクトリも含む）
           path: |
-            scripts/sims/*.csv
-            scripts/sims/*.json
+            scripts/sims/**/*.csv
+            scripts/sims/**/*.json
           if-no-files-found: warn
