--- a/.github/workflows/sims_keymon.yml
+++ b/.github/workflows/sims_keymon.yml
@@ -17,7 +17,7 @@ on:
           追加フィルタ（;区切り）。
           例: pids=02,04;races=1R,2R;only_first1=true;
               odds_bands=01-09,10-19,20-49;require_odds=false;predict_only=false;
-              keyman_enable=true;keyman_threshold=0.7;keyman_boost=0.15
+              keyman_enable=true;keyman_threshold=0.7;keyman_boost=0.15;keyman_aggr=0.6
         required: false
         default: ""
 
@@ -79,9 +79,10 @@ jobs:
           PREDICT_ONLY="false"
 
           # ▼ keyman 制御（filter で上書き可能）
-          KEYMAN_ENABLE_IN="true"     # デフォルト: ON
-          KEYMAN_THRESHOLD="0.9"      # デフォルト: 0.7
-          KEYMAN_BOOST="4.15"         # デフォルト: 0.15（= 1.15倍）
+          KEYMAN_ENABLE_IN="true"     # 既定: ON
+          KEYMAN_THRESHOLD="0.9"      # 既定: 0.9（例に合わせる）
+          KEYMAN_BOOST="4.15"         # 既定: 4.15（例に合わせる）
+          KEYMAN_AGGR="0.0"           # ★追加: 展開寄与率（0〜1目安）
 
           # ===== Parse FILTER (lowercase keys) =====
           if [ -n "$FILTER" ]; then
@@ -103,6 +104,7 @@ jobs:
                 keyman_enable)    KEYMAN_ENABLE_IN="$val" ;;
                 keyman_threshold) KEYMAN_THRESHOLD="$val" ;;
                 keyman_boost)     KEYMAN_BOOST="$val" ;;
+                keyman_aggr)      KEYMAN_AGGR="$val" ;;   # ★追加
               esac
             done
           fi
@@ -145,14 +147,14 @@ jobs:
             ARGS+=( --params "$PARAMS_PATH" )
           fi
 
-          # ▼ 新規: keyman 制御（sims.py が pass2 実行/しきい値/ブーストを解釈）
-          ARGS+=( --keyman-enable "$KEYMAN_ENABLE_IN" --keyman-threshold "$KEYMAN_THRESHOLD" --keyman-boost "$KEYMAN_BOOST" )
+          # ▼ keyman 制御（sims.py が pass2 実行/しきい値/ブースト/寄与率を解釈）
+          ARGS+=( --keyman-enable "$KEYMAN_ENABLE_IN" --keyman-threshold "$KEYMAN_THRESHOLD" --keyman-boost "$KEYMAN_BOOST" --keyman-aggr "$KEYMAN_AGGR" )
 
           echo "[debug] BASE=$BASE"
           echo "[debug] DATES=${DATES:-'(none)'}  SIMS=$SIMS  TOPN=$TOPN  UNIT=$UNIT"
           echo "[debug] ODDS_BASE=$ODDS_BASE  ODDS_BANDS=${ODDS_BANDS:-'(none)'}  ODDS_MIN=${ODDS_MIN:-'(none)'}  ODDS_MAX=${ODDS_MAX:-'(none)'}"
           echo "[debug] MIN_EV=${MIN_EV:-'(none)'}  REQUIRE_ODDS=$REQUIRE_ODDS  ONLY_FIRST1=$ONLY  PREDICT_ONLY=$PREDICT_ONLY"
-          echo "[debug] KEYMAN_ENABLE=$KEYMAN_ENABLE_IN  KEYMAN_THRESHOLD=$KEYMAN_THRESHOLD  KEYMAN_BOOST=$KEYMAN_BOOST"
+          echo "[debug] KEYMAN_ENABLE=$KEYMAN_ENABLE_IN  KEYMAN_THRESHOLD=$KEYMAN_THRESHOLD  KEYMAN_BOOST=$KEYMAN_BOOST  KEYMAN_AGGR=$KEYMAN_AGGR"
           echo "[debug] PARAMS=${PARAMS_NAME:-'(none)'} -> ${PARAMS_PATH:-'(n/a)'}"
           echo "[debug] args: ${ARGS[*]}"
 
