--- a/.github/workflows/train_trifecta.yml
+++ b/.github/workflows/train_trifecta.yml
@@ -20,12 +20,10 @@ concurrency:
 jobs:
   train:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # ※ cache指定や requirements 検出は一切しない（ここが失敗原因）
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -34,23 +32,21 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install lightgbm scikit-learn pandas pyarrow
+          pip install lightgbm scikit-learn pandas pyarrow joblib
 
       - name: Run training
         run: python scripts/train_trifecta.py
 
-      - name: Commit predictions
+      - name: Commit trained model
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add public/preds/*.parquet || true
-          git diff --cached --quiet || git commit -m "Update trifecta predictions (auto)"
+          git add models/trifecta_lgbm.pkl
+          git commit -m "Update trained trifecta model" || echo "No changes to commit"
           git push
 
-      # Optional: Artifactsにも保存（不要なら削除可）
-      - name: Upload prediction artifacts
+      - name: Upload model artifact
         uses: actions/upload-artifact@v4
         with:
-          name: trifecta-preds
-          path: public/preds/*.parquet
-          if-no-files-found: ignore
+          name: trifecta-model
+          path: models/trifecta_lgbm.pkl
