--- a/.github/workflows/predict_trifecta.yml
+++ b/.github/workflows/predict_trifecta.yml
@@ -1,32 +1,66 @@
-# .github/workflows/predict_trifecta.yml
 name: Predict trifecta
 
 on:
+  # 手動トリガー（必要な入力だけ受け取る）
   workflow_dispatch:
     inputs:
-      date: { description: 'YYYYMMDD', required: true }
-      jcd:  { description: '場コード(例 02)', required: true }
-      race: { description: '例 10R', required: false }
-permissions: { contents: write }
+      date:
+        description: '対象日 (YYYYMMDD)'
+        required: true
+      jcd:
+        description: '場コード (例: 02)'
+        required: true
+      race:
+        description: 'レース (例: 10R) ※省略可'
+        required: false
+        default: ''
+
+permissions:
+  contents: write  # 予測CSV/Parquetをコミットするため
+
+concurrency:
+  group: predict-trifecta-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   predict:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: '3.11' }
-      - run: |
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install lightgbm pandas pyarrow joblib
-      - run: |
+
+      - name: Run prediction
+        run: |
+          RACE_OPT=""
+          if [ -n "${{ github.event.inputs.race }}" ]; then
+            RACE_OPT="--race ${{ github.event.inputs.race }}"
+          fi
           python scripts/predict_trifecta.py \
             --date ${{ github.event.inputs.date }} \
             --jcd  ${{ github.event.inputs.jcd }} \
-            ${ { github.event.inputs.race && format('--race {0}', github.event.inputs.race) } }
-      - run: |
+            $RACE_OPT
+
+      - name: Commit predictions
+        run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add public/preds/** || true
-          git diff --cached --quiet || git commit -m "Add preds"
+          git diff --cached --quiet || git commit -m "Add trifecta predictions (${{ github.event.inputs.date }} ${{ github.event.inputs.jcd }} ${{ github.event.inputs.race }})"
           git push
+
+      - name: Upload prediction artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: trifecta-preds-${{ github.event.inputs.date }}-${{ github.event.inputs.jcd }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
+          path: public/preds/**
+          if-no-files-found: warn
