--- a/.github/workflows/predict_trifecta.yml
+++ b/.github/workflows/predict_trifecta.yml
@@ -1,3 +1,4 @@
+# .github/workflows/predict.yml
 name: Predict trifecta
 
 on:
@@ -27,8 +28,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -57,6 +56,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add public/preds/** || true
           git diff --cached --quiet || git commit -m "Add trifecta predictions (${{ github.event.inputs.date }} ${{ github.event.inputs.jcd }} ${{ github.event.inputs.race }})"
+          # 競合回避（不要なら削除可）
           git pull --rebase || true
           git push || true
 
