--- a/.github/workflows/tenkai_features_c.yml
+++ b/.github/workflows/tenkai_features_c.yml
@@ -10,7 +10,7 @@ on:
         description: '場コード pid (例: 02)'
         required: true
       race:
-        description: 'レース (例: 1R)  空なら全R'
+        description: 'レース (例: 1R) 空なら全R'
         required: false
         default: ''
 
@@ -36,12 +36,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas
+          pip install pandas python-dateutil
 
+      # ここを TENKAI/ に変更
       - name: Sanity check
         run: |
-          test -f scripts/TENKAI/features_c.py || { echo "scripts/TENKAI/features_c.py がありません"; exit 1; }
-          test -f scripts/TENKAI/build_c_features.py || { echo "scripts/TENKAI/build_c_features.py がありません"; exit 1; }
+          test -f TENKAI/features_c.py        || { echo "TENKAI/features_c.py がありません"; exit 1; }
+          test -f TENKAI/build_c_features.py  || { echo "TENKAI/build_c_features.py がありません"; exit 1; }
 
       - name: Build C features
         shell: bash
@@ -51,12 +52,13 @@ jobs:
           if [ -n "${{ github.event.inputs.race }}" ]; then
             RACE_OPT="--race '${{ github.event.inputs.race }}'"
           fi
-          echo "python scripts/TENKAI/build_c_features.py --date '${{ github.event.inputs.date }}' --pid '${{ github.event.inputs.pid }}' $RACE_OPT"
-          python scripts/TENKAI/build_c_features.py \
+          echo "python TENKAI/build_c_features.py --date '${{ github.event.inputs.date }}' --pid '${{ github.event.inputs.pid }}' $RACE_OPT"
+          python TENKAI/build_c_features.py \
             --date "${{ github.event.inputs.date }}" \
             --pid  "${{ github.event.inputs.pid }}" \
             ${RACE_OPT}
 
+      # 出力先も大文字 TENKAI に合わせる
       - name: Commit outputs
         run: |
           git config user.name  "github-actions[bot]"
@@ -68,6 +70,6 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: TENKAI-c-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
+          name: tenkai-c-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
           path: public/TENKAI/features_c/v1/**
           if-no-files-found: warn
