--- a/.github/workflows/tenkai_features_c.yml
+++ b/.github/workflows/tenkai_features_c.yml
@@ -36,13 +36,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas python-dateutil
+          pip install pandas
 
-      # ここを TENKAI/ に変更
       - name: Sanity check
+        shell: bash
         run: |
-          test -f TENKAI/features_c.py        || { echo "TENKAI/features_c.py がありません"; exit 1; }
-          test -f TENKAI/build_c_features.py  || { echo "TENKAI/build_c_features.py がありません"; exit 1; }
+          set -e
+          test -f TENKAI/features_c.py || { echo "TENKAI/features_c.py がありません"; exit 1; }
+          test -f TENKAI/build_c_features.py || { echo "TENKAI/build_c_features.py がありません"; exit 1; }
 
       - name: Build C features
         shell: bash
@@ -58,12 +59,12 @@ jobs:
             --pid  "${{ github.event.inputs.pid }}" \
             ${RACE_OPT}
 
-      # 出力先も大文字 TENKAI に合わせる
       - name: Commit outputs
+        shell: bash
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add public/TENKAI/features_c/v1/** || true
+          git add TENKAI/features_c/v1/** || true
           git diff --cached --quiet || git commit -m "TENKAI C features: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
           git push
 
@@ -71,5 +72,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tenkai-c-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
-          path: public/TENKAI/features_c/v1/**
+          path: TENKAI/features_c/v1/**
           if-no-files-found: warn
