--- a/.github/workflows/tenkai_features_c.yml
+++ b/.github/workflows/tenkai_features_c.yml
@@ -10,7 +10,7 @@ on:
         description: '場コード pid (例: 02)'
         required: true
       race:
-        description: 'レース (例: 1R) 空なら全R'
+        description: 'レース (例: 1R)  空なら全R'
         required: false
         default: ''
 
@@ -36,14 +36,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas
+          pip install pandas python-dateutil
 
       - name: Sanity check
-        shell: bash
         run: |
-          set -e
-          test -f TENKAI/features_c.py || { echo "TENKAI/features_c.py がありません"; exit 1; }
-          test -f TENKAI/build_c_features.py || { echo "TENKAI/build_c_features.py がありません"; exit 1; }
+          test -f TENKAI/features_c.py        || { echo "TENKAI/features_c.py がありません"; exit 1; }
+          test -f TENKAI/build_c_features.py  || { echo "TENKAI/build_c_features.py がありません"; exit 1; }
 
       - name: Build C features
         shell: bash
@@ -51,16 +49,15 @@ jobs:
           set -euo pipefail
           RACE_OPT=""
           if [ -n "${{ github.event.inputs.race }}" ]; then
-            RACE_OPT="--race '${{ github.event.inputs.race }}'"
+            RACE_OPT="--race ${{ github.event.inputs.race }}"
           fi
-          echo "python TENKAI/build_c_features.py --date '${{ github.event.inputs.date }}' --pid '${{ github.event.inputs.pid }}' $RACE_OPT"
+          echo "python TENKAI/build_c_features.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} $RACE_OPT"
           python TENKAI/build_c_features.py \
             --date "${{ github.event.inputs.date }}" \
             --pid  "${{ github.event.inputs.pid }}" \
-            ${RACE_OPT}
+            $RACE_OPT
 
       - name: Commit outputs
-        shell: bash
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
